--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,7 @@
 
     <section class="service-filter">
       <h2 class="visually-hidden">Фильтр услуг</h2>
-      <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+      <form class="filter" method="get" action="https://echo.htmlacademy.ru" target="_blank">
         <fieldset class="filter-item">
           <legend>Стоимость:</legend>
           <div class="range-filter">
@@ -122,13 +122,13 @@
   <ul class="sorting-filter-list">
 
     <li class="sorting-filter-item sorting-filter-item-current">
-      <a>По цене</a>
+      <a tabindex="0">По цене</a>
     </li>
     <li class="sorting-filter-item">
       <a href="#">По типу</a>
     </li>
     <li class="sorting-filter-item">
-      <a href="#">По названию</a>
+      <a href="#" tabindex="0">По названию</a>
     </li>
   </ul>
 
@@ -145,14 +145,14 @@
 <section class="templates">
   <h2 class="visually-hidden">Шаблоны</h2>
   <ul class="template-list">
-    <li class="template-item">
+    <li class="template-item" tabindex="0">
       <h3 class="visually-hidden">SEDONA</h3>
       <div class="templates-button">
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
       </div>
-      <img class="template-picture" src="img/img-sedona.jpg" width="358" height="578" alt="шаблон SEDONA">
+      <img class="template-picture" src="img/img-sedona.jpg" width="358" height="578" alt="Главная страница сайта, фото достопримечательностей города и обзор преимуществ для туризма">
       <div class="template-popup">
         <a class="template-price-title" href="#">Sedona</a>
         <p class="template-price-text">Информационный сайт <br> для туристов</p>
@@ -160,14 +160,14 @@
       </div>
     </li>
 
-    <li class="template-item">
+    <li class="template-item" tabindex="0">
       <h3 class="visually-hidden">PINK</h3>
       <div class="templates-button">
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
       </div>
-      <img class="template-picture" src="img/img-pink.jpg" width="358" height="578" alt="шаблон PINK">
+      <img class="template-picture" src="img/img-pink.jpg" width="358" height="578" alt="Главная страница сайта, предложение скачать приложение, изображение с телефоном в руке, экран телефона с ярко-розовым фильтром">
       <div class="template-popup">
         <a class="template-price-title" href="#">Pink App</a>
         <p class="template-price-text">Продуктовый лендинг <br> приложения для iOS и Android</p>
@@ -175,14 +175,14 @@
       </div>
     </li>
 
-    <li class="template-item">
+    <li class="template-item" tabindex="0">
       <h3 class="visually-hidden">Barbershop BORODINSKI</h3>
       <div class="templates-button">
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
       </div>
-      <img class="template-picture" src="img/img-barbershop.jpg" width="358" height="578" alt="шаблон Barbershop BORODINSKI">
+      <img class="template-picture" src="img/img-barbershop.jpg" width="358" height="578" alt="Главная страница сайта, тёмный фон с рабочим местом барбера, указание статистики и преимуществ салона">
       <div class="template-popup">
         <a class="template-price-title" href="#">Barbershop</a>
         <p class="template-price-text">Сайт салона красоты.<br>  Для мужчин, да.</p>
@@ -190,29 +190,29 @@
       </div>
     </li>
 
-    <li class="template-item">
+    <li class="template-item" tabindex="0">
       <h3 class="visually-hidden">MiSHKA</h3>
       <div class="templates-button">
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
       </div>
-      <img class="template-picture" src="img/img-mishka.jpg" width="358" height="578" alt="шаблон MiSHKA">
+      <img class="template-picture" src="img/img-mishka.jpg" width="358" height="578" alt="Главная страница сайта, фотографии вязаных изделий с указанием параметров и цены, информация о преимуществах магазина">
       <div class="template-popup">
         <a class="template-price-title" href="#">MISHKA</a>
-        <p class="template-price-text">Интернет-магазин <br> вязаных игрушек</p>
+        <p class="template-price-text">Интернет магазин <br> вязанных игрушек</p>
         <a class="button template-price-button" href="#">9 900 ₽</a>
       </div>
     </li>
 
-    <li class="template-item">
+    <li class="template-item" tabindex="0">
       <h3 class="visually-hidden">A Plus</h3>
       <div class="templates-button">
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
       </div>
-      <img class="template-picture" src="img/img-aplus.jpg" width="358" height="578" alt="шаблон A Plus">
+      <img class="template-picture" src="img/img-aplus.jpg" width="358" height="578" alt="Главная страница сайта, на сиреневом фоне изображены дисковый телефон, планшет и рука с канцелярскими предметами, указание формы обучения и преимуществ курсов">
       <div class="template-popup">
         <a class="template-price-title" href="#">A Plus</a>
         <p class="template-price-text">Лендинг курсов повышения<br> квалификации</p>
@@ -220,14 +220,14 @@
       </div>
     </li>
 
-    <li class="template-item">
+    <li class="template-item" tabindex="0">
       <h3 class="visually-hidden">КВАСТ</h3>
       <div class="templates-button">
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
-        <button type="button" aria-label="Декоративная кнопка"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
+        <button type="button" aria-label="Декоративная кнопка" tabindex="-1"></button>
       </div>
-        <img class="template-picture" src="img/img-kvast.jpg" width="358" height="578" alt="шаблон КВАСТ">
+        <img class="template-picture" src="img/img-kvast.jpg" width="358" height="578" alt="Главная страница сайта, фоновое изображение с колосьями ржи, фотографии стеклянных бутылок кваса с описанием разновидностей">
       <div class="template-popup">
         <a class="template-price-title" href="#">КВАСТ</a>
         <p class="template-price-text">Промо-сайт производителя<br>  крафтового кваса</p>
@@ -241,7 +241,7 @@
   <h2 class="visually-hidden">Пагинация</h2>
   <ul class="pagination-list">
     <li class="pagination-item pagination-item-current">
-      <a>1</a>
+      <a tabindex="0">1</a>
     </li>
     <li class="pagination-item">
       <a href="#">2</a>
@@ -296,7 +296,7 @@
         <li class="social-item">
           <a class="social-button" href="#">
             <span class="visually-hidden">Вконтакте</span>
-            <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg role="img" aria-label="Логотип Вконтакте" width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z" fill="white"/>
             </svg>
           </a>
@@ -304,7 +304,7 @@
         <li class="social-item">
           <a class="social-button" href="#">
             <span class="visually-hidden">Фейсбук</span>
-            <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg role="img" aria-label="Логотип Фейсбук" width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
             </svg>
           </a>
@@ -312,7 +312,7 @@
         <li class="social-item">
           <a class="social-button" href="#">
             <span class="visually-hidden">Инстаграм</span>
-            <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg role="img" aria-label="Логотип Инстаграм" width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z" fill="white"/>
             </svg>
           </a>
