--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <title>HTML Academy: Нёрдс</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page-body">
 
   <header class="main-header">
-    <div class="main-header-wrapper container">
+    <div class="header-container container">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип nёrds">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="чёрный логотип nёrds на белом фоне">
         </a>
         <ul class="site-navigation">
           <li class="site-link"><a href="#">Студия</a></li>
@@ -31,135 +31,136 @@
 
       <section class="photoslides">
         <h2 class="visually-hidden">Фотослайды</h2>
-        <div class="photoslides-wrapper">
-          <ul  class="photoslides-list">
-            <li class="photoslides-item slide-current">
-              <h3>Долго, дорого,<br> скурпулезно.</h3>
-              <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-              <a class="button photoslides-know-button" href="#">Узнать больше</a>
-              <img src="img/nerds-index-slide-1.png" width="760" height="431" alt="3 телефона">
-            </li>
-            <li class="photoslides-item slide">
-              <h3>Любим математику<br> как никто другой</h3>
-              <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
-              <a class="button photoslides-know-button" href="#">Узнать больше</a>
-              <img src="img/nerds-index-slide-2.png" width="760" height="431" alt="2 компьютера">
-            </li>
-            <li class="photoslides-item slide">
-              <h3>Только ночь,<br> только хардкор</h3>
-              <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
-              <a class="button photoslides-know-button" href="#">Узнать больше</a>
-              <img src="img/nerds-index-slide-3.png" width="760" height="431" alt="планшет и телефон">
-            </li>
-          </ul>
-          <div class="photoslides-controls">
-            <button class="current" type="button" aria-label="Первый слайд"></button>
-            <button type="button" aria-label="Второй слайд"></button>
-            <button type="button" aria-label="Третий слайд"></button>
-          </div>
+        <ul  class="photoslides-list">
+          <li class="photoslides-item-1 slide-current">
+            <h3>Долго, дорого,<br> скрупулезно.</h3>
+            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <a class="button photoslides-know-button" href="#">Узнать больше</a>
+            <img src="img/nerds-index-slide-1.png" width="760" height="431" alt="3 телефона">
+          </li>
+          <li class="photoslides-item-2 slide">
+            <h3>Любим математику<br> как никто другой</h3>
+            <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
+            <a class="button photoslides-know-button" href="#">Узнать больше</a>
+            <img src="img/nerds-index-slide-2.png" width="760" height="431" alt="2 компьютера">
+          </li>
+          <li class="photoslides-item-3 slide">
+            <h3>Только ночь,<br> только хардкор</h3>
+            <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+            <a class="button photoslides-know-button" href="#">Узнать больше</a>
+            <img src="img/nerds-index-slide-3.png" width="760" height="431" alt="планшет и телефон">
+          </li>
+        </ul>
+        <div class="photoslides-controls">
+          <button class="current" type="button" aria-label="Первый слайд"></button>
+          <button type="button" aria-label="Второй слайд"></button>
+          <button type="button" aria-label="Третий слайд"></button>
         </div>
       </section>
     </div>
   </header>
 
-  <main class="page-main  container">
-    <div class="page-main-wrapper">
-      <section class="services">
-        <h2 class="visually-hidden">Услуги</h2>
-        <ul class="services-list">
-          <li class="services-item">
-            <img src="img/illustration-1.png" width="300" height="146" alt="веб-сайты на красном фоне">
-            <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
-            <a class="button website-button" href="#">Заказать</a>
+  <main class="page-main container">
+    <section class="services">
+      <h2 class="visually-hidden">Услуги</h2>
+      <ul class="services-list">
+        <li class="services-item">
+          <img class="services-image-1" src="img/illustration-1.png" width="300" height="146" alt="веб-сайты на красном фоне">
+          <h3>Веб-сайты</h3>
+          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+          <a class="button website-button" href="#">Заказать</a>
+        </li>
+        <li class="services-item">
+          <img class="services-image-2" src="img/illustration-2.png" width="300" height="146" alt="приложения на зеленом фоне">
+          <h3>Приложения</h3>
+          <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
+          <a class="button app-button" href="#">Заказать</a>
+        </li>
+        <li class="services-item">
+          <img class="services-image-3" src="img/illustration-3.png" width="300" height="146" alt="презентации на желтом фоне">
+          <h3>Презентации</h3>
+          <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+          <a class="button presentation-button" href="#">Заказать</a>
+        </li>
+      </ul>
+    </section>
+
+    <div class="features-and-statistics">
+      <section class="features">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <p class="features-slogan">Мы — маленькая, но гордая<br> дизайн-студия из Краснодара.</p>
+        <p class="features-desc">Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br> превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p class="features-text">Выполняем заказы на разработку:</p>
+        <ul class="features-list">
+          <li class="features-item">
+            <p>Веб-сайтов любой сложности</p>
           </li>
-          <li class="services-item">
-            <img src="img/illustration-2.png" width="300" height="146" alt="приложения на зеленом фоне">
-            <h3>Приложения</h3>
-            <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
-            <a class="button app-button" href="#">Заказать</a>
+          <li class="features-item">
+            <p>Мобильных приложений для iOS и Android</p>
           </li>
-          <li class="services-item">
-            <img src="img/illustration-3.png" width="300" height="146" alt="презентации на желтом фоне">
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
-            <a class="button presentation-button" href="#">Заказать</a>
+          <li class="features-item">
+            <p>Слайдшоу и видео для корпоративных презентаций</p>
           </li>
         </ul>
       </section>
 
-      <div class="features-and-statistics">
-        <section class="features">
-          <h2 class="visually-hidden">Преимущества</h2>
-          <p class="features-slogan">Мы - маленькая, но гордая<br> дизайн-студия из Краснодара.</p>
-          <p class="features-desc">Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br> превыше креатива. Работаем не покладая рук, как роботы.</p>
-          <p class="features-text">Выполняем заказы на разработку:</p>
-          <ul class="features-list">
-            <li class="features-item">
-              <p>Веб-сайтов любой сложности</p>
-            </li>
-            <li class="features-item">
-              <p>Мобильных приложений для iOS и Android</p>
-            </li>
-            <li class="features-item">
-              <p>Слайдшоу и видео для корпоративных презентаций</p>
-            </li>
-          </ul>
-        </section>
+      <section class="statistics">
+        <h2 class="visually-hidden">Статистика</h2>
 
-        <section class="statistics">
-          <h2 class="visually-hidden">Статистика</h2>
-
-          <p class="statistics-caption">С 2004 года любим точность во всем:</p>
-          <ul class="statistics-list">
-            <li class="statistics-item">
-              <span class="statistics-numeral">146</span>
-              <span class="statistics-percent">%</span>
-            </li>
-            <li class="statistics-item">
-              <span class="statistics-numeral">100</span>
-              <span class="statistics-percent">%</span>
-            </li>
-            <li class="statistics-item">
-              <span class="statistics-numeral">50</span>
-              <span class="statistics-percent">%</span>
-            </li>
-          </ul>
-          <div class="statistics-desc">
-            <p class="statistics-desc-1">Уровень<br> самоотдачи</p>
-            <p class="statistics-desc-2">Соблюдение<br> сроков</p>
-            <p class="statistics-desc-3">Минимальная<br> предоплата</p>
-          </div>
-        
-        </section>
-      </div>
-
-      <section class="partners">
-        <h2 class="visually-hidden">Наши партнеры:</h2>
-        <ul class="partners-list">
-          <li class="partners-item">
-            <a class="partner-link" href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/logo-1.png" width="199" height="68" alt="партнер html academy">
-            </a>
+        <p class="statistics-caption">С 2004 года любим точность во всем:</p>
+        <ul class="statistics-list">
+          <li class="statistics-item">
+            <span class="statistics-numeral">146</span>
+            <span class="statistics-percent">%</span>
           </li>
-          <li class="partners-item">
-            <a class="partner-link" href="#">
-              <img class="partner-logo" src="img/logo-2.png" width="209" height="90" alt="партнер Barbershop BORODINSKI">
-            </a>
+          <li class="statistics-item">
+            <span class="statistics-numeral">100</span>
+            <span class="statistics-percent">%</span>
           </li>
-          <li class="partners-item">
-            <a class="partner-link" href="#">
-              <img class="partner-logo" src="img/logo-3.png" width="185" height="52" alt="партнер PINK">
-            </a>
+          <li class="statistics-item">
+            <span class="statistics-numeral">50</span>
+            <span class="statistics-percent">%</span>
           </li>
-          <li class="partners-item">
-            <a class="partner-link" href="#">
-              <img class="partner-logo" src="img/logo-4.png" width="173" height="84" alt="партнер MiSHKA">
-            </a>
+        </ul>
+        <ul class="statistics-desc">
+          <li class="statistics-desc-item">
+            <p>Уровень<br> самоотдачи</p>
+          </li>
+          <li class="statistics-desc-item">
+            <p>Соблюдение<br> сроков</p>
+          </li>
+          <li class="statistics-desc-item">
+            <p>Минимальная<br> предоплата</p>
           </li>
         </ul>
       </section>
     </div>
+
+    <section class="partners">
+      <h2 class="visually-hidden">Наши партнеры:</h2>
+      <ul class="partners-list">
+        <li class="partners-item">
+          <a class="partner-link" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo-1.png" width="199" height="68" alt="партнер html academy">
+          </a>
+        </li>
+        <li class="partners-item">
+          <a class="partner-link" href="#">
+            <img src="img/logo-2.png" width="209" height="90" alt="партнер Barbershop BORODINSKI">
+          </a>
+        </li>
+        <li class="partners-item">
+          <a class="partner-link" href="#">
+            <img src="img/logo-3.png" width="185" height="52" alt="партнер PINK">
+          </a>
+        </li>
+        <li class="partners-item">
+          <a class="partner-link" href="#">
+            <img src="img/logo-4.png" width="173" height="84" alt="партнер MiSHKA">
+          </a>
+        </li>
+      </ul>
+    </section>
   </main>
 
 
@@ -186,7 +187,7 @@
         <p class="contacts-phone">тел.
           <a class="contacts-phone-number" href="tel:+78122757575">+7 (812) 275-75-75</a>
         </p>
-        <a class="button contacts-button" href="#">Напишите нам</a>
+        <a class="button contacts-button" href="modal.html">Напишите нам</a>
       </section>
 
       <section class="marker">
@@ -256,7 +257,7 @@
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
 
-<script src="js/popup.js"></script>
+  <script src="js/popup.min.js"></script>
 
 </body>
 </html>
